--- a/resources/sass/importDegree.scss
+++ b/resources/sass/importDegree.scss
@@ -1,10 +1,11 @@
 .attributeBox {
-    width:400px;
+    font-size: .2em;
     box-sizing: border-box;
     margin: 0 auto;
-    height: 40px;
     margin-bottom: 20px;
     margin-top: 10px;
+    padding: 10px 5px;
+    max-width: 1200px;
 }
 .attributeBox:hover, .attributeBox:focus {
     box-shadow: $box-shadow-lg !important;
